# nxdo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  goal.yaml  index.html  local.dev.txt  project.sh  pyproject.toml  strategy.yaml  todo.md  tree.txt
.cursor/: mcp.json
.github/workflows/: ci.yml
.koru/: event-store.jsonl
.koru/events/: observability.jsonl
.nlp2dsl/: environment.doql.less
.nlp2dsl/registry/: environment.doql.less
.planfile/: config.yaml
.planfile/.koru/: README.md
.planfile/.koru/runs/: queue-20260526T194440Z-947266.jsonl  queue-20260526T195237Z-990505.jsonl
.planfile/sprints/: backlog.yaml.fast.json  current.yaml  current.yaml.fast.json
docs/: README.md  how-it-works.md
examples/: README.md  check-examples.sh  nxdo-self-context.txt  nxdo-self-metrics.txt  nxdo-self-plan.json  nxdo-self-plan.txt  nxdo-self-prompt.txt
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
src/lane/: __init__.py  cli.py  config.py  git_reader.py  koru_context.py  llm_client.py  models.py  output.py  planner.py  project_analyzer.py  ticket_generator.py
src/lane/metrics/: __init__.py  complexity.py  hotspots.py
src/lane/providers/: __init__.py  openai_compat.py
src/nxdo/: __init__.py  __main__.py  cli.py  config.py  git_reader.py  koru_context.py  llm_client.py  models.py  output.py  planner.py  project_analyzer.py  ticket_generator.py
src/nxdo/metrics/: complexity.py  coupling.py
src/nxdo/providers/: __init__.py  base.py  openai_compat.py
testql-scenarios/: generated-cli-tests.testql.toon.yaml
tests/: test_cli.py  test_config.py  test_git_reader.py  test_llm_client.py  test_metrics.py  test_models.py  test_output.py  test_planner.py  test_project_analyzer.py  test_providers.py  test_ticket_generator.py
