[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lane"
version = "0.1.0"
description = "Generate the next 10 project tasks from project state, git history and an LLM prompt."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "semcod" }]
keywords = ["planning", "llm", "git", "roadmap", "tasks"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development",
]
dependencies = [
  "pydantic>=2",
  "pydantic-settings>=2",
  "typer>=0.12",
  "rich>=13",
  "httpx>=0.27",
  "tenacity>=8",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "ruff",
  "mypy",
]

[project.scripts]
lane = "lane.cli:app_entry"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

