[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lane"
version = "0.2.21"
description = "Generate the next 10 project tasks from project state, git history and an LLM prompt."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "semcod" }, {name = "Tom Sapletta",email = "tom@sapletta.com"}]
keywords = ["planning", "llm", "git", "roadmap", "tasks"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
  "pydantic>=2",
  "pydantic-settings>=2",
  "typer>=0.12",
  "rich>=13",
  "httpx>=0.27",
  "tenacity>=8",
  "pyyaml>=6.0",
  "planfile @ git+https://github.com/semcod/planfile.git",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "ruff",
  "mypy",
  "goal>=2.1.0",
  "costs>=0.1.20",
  "pfix>=0.1.60",
]

[project.urls]
Homepage = "https://github.com/semcod/lane"
Repository = "https://github.com/semcod/lane"
Issues = "https://github.com/semcod/lane/issues"

[project.scripts]
lane = "lane.cli:app_entry"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lane" = ["examples/**/*.yaml", "examples/**/*.yml"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true


[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
